Updated remote of the test cases

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/CIDARLAB/pyparchmint.git
 [submodule "test"]
 	path = test
-	url = ./test/
+	url = https://github.com/CIDARLAB/LFR-TestCases.git
