--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ antlr4-python3-runtime = "^4.8"
 pygraphviz = "^1.6"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.8.3"
+mypy = "^0.782"
+black = "^20.8b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
