--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "3.8"
 networkx = "^2.5"
 argparse = "^1.4.0"
 parchmint = {path = "../pyparchmint"}
-mint = {path = "../pymint"}
+pymint = {path = "../pymint"}
 dafd = {path = "../DAFD"}
 antlr4-python3-runtime = "^4.8"
 pygraphviz = "^1.6"
@@ -25,4 +25,4 @@ requires = ["poetry-core>=1.0.0a5"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-pyLFR = "lfr.cmdline:main"
+lfr-compile = "lfr.cmdline:main"
