--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "lfr"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
 license = "BSD-3-Clause"
 
 [tool.poetry.dependencies]
-python = "3.8"
+python = "^3.8"
 networkx = "^2.5"
 argparse = "^1.4.0"
 parchmint = {path = "../pyparchmint"}
