--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pymint = {path = "../pymint"}
 mypy = "^0.782"
 black = "^20.8b1"
 flake8 = "^3.8.3"
+rope = "^0.18.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
