--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ antlr4-python3-runtime = "^4.8"
 pygraphviz = "^1.6"
 parchmint = {path = "../pyparchmint"}
 pymint = {path = "../pymint"}
+BitVector = "^3.4.9"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
