fixed error where I was not storing the imported modules correctly causing the fig genereration pipeline to break over multiple files.
This also includes the test case and the launch config for vscode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,6 +91,21 @@
             ],
             "console": "integratedTerminal"
         },
+        {
+            "name": "Debug - CLI TEST",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/lfr/cmdline.py",
+            "args": [
+                "--no-gen",
+                "--outpath",
+                "./out/",
+                "${workspaceFolder}/test/chthesis/rotary16.lfr",
+                "${workspaceFolder}/test/distribute-library/mux_16_in.lfr",
+                "${workspaceFolder}/test/distribute-library/mux_16_out.lfr"
+            ],
+            "console": "integratedTerminal"
+        },
 
     ]
 }
