--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lfr"
-version = "0.1.2"
+version = "0.1.3"
 description = ""
 authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
 license = "BSD-3-Clause"
@@ -11,9 +11,7 @@ networkx = "^2.5"
 argparse = "^1.4.0"
 antlr4-python3-runtime = "^4.8"
 pygraphviz = "^1.6"
-parchmint = {path = "../pyparchmint"}
-pymint = {path = "../pymint"}
-BitVector = "^3.4.9"
+pymint = "^0.1.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
