--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,13 @@ version = "0.1.3"
 description = ""
 authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
 license = "BSD-3-Clause"
+packages = [
+    { include = "lfr" },
+]
+include = [
+    "library/*",
+    "library/default-netlists/*"
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -11,7 +18,7 @@ networkx = "^2.5"
 argparse = "^1.4.0"
 antlr4-python3-runtime = "^4.8"
 pygraphviz = "^1.6"
-pymint = "^0.1.3"
+pymint = "latest"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
