--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
   "python.linting.enabled": true,
   "python.linting.flake8Args": ["--max-line-length=300"],
   "python.formatting.provider": "black",
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "python.linting.pylintEnabled": false
 }
