Created the interfaces and the base classes for the graph matcher

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ rope = "^0.18.0"
 pymint = {path = "/home/krishna/CIDAR/pymint", develop=true}
 parchmint = {path = "/home/krishna/CIDAR/pyparchmint", develop=true}
 dafd = {path = "/home/krishna/CIDAR/dafd", develop=true}
+reggie = {path = "/home/krishna/CIDAR/reggie", develop=true}
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
