--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "python.linting.flake8Enabled": true,
   "python.linting.enabled": true,
-  "python.linting.flake8Args": ["--max-line-length=88"],
+  "python.linting.flake8Args": ["--max-line-length=88", "--ignore=E203"],
   "python.formatting.provider": "black",
   "editor.formatOnSave": true,
   "python.linting.pylintEnabled": false,
