--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,6 +1,6 @@
 version = 1
 
-exclude_patterns = ["**/antlrgen/*"]
+exclude_patterns = ["**/antlrgen/*","BitVector.py"]
 
 [[analyzers]]
 name = "python"
