Fixed missing references to mint and updated the dockerfile for `lfr-compile` command to work

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -41,3 +41,4 @@ RUN pip install pygraphviz
 RUN pip install "poetry==$POETRY_VERSION"
 
 RUN poetry config virtualenvs.create false
+ENV PYTHONPATH=${PYTHONPATH}:${PWD} 
