--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -92,6 +92,21 @@
             "console": "integratedTerminal"
         },
         {
+            "name": "Debug - Customfile, NO GEN (with distribute library)",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/lfr/cmdline.py",
+            "args": [
+                "--no-gen",
+                "--outpath",
+                "./out/",
+                "--pre-load",
+                "../LFR-Testcases/distribute-library",
+                "${file}"
+            ],
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Debug - CLI TEST",
             "type": "python",
             "request": "launch",
