--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dafd = "latest"
 numpy = "^1.19.4"
 tabulate = "^0.8.7"
 pymint = "^0.2.11"
+art = "^5.2"
+jsonschema = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
