--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ tabulate = "^0.8.7"
 pymint = "^0.2.11"
 art = "^5.2"
 jsonschema = "^3.2.0"
+pyeda = "^0.28.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
