--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,9 @@ pymint = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
-black = "^20.8b1"
 flake8 = "^3.8.3"
 rope = "^0.18.0"
+black = "22.3.0"
 
 [tool.poetry.scripts]
 lfr-compile = "lfr.cmdline:main"
