Updated the variant generation process
The new process uses a data structure called the 'VariantTree'. This
is a dynamic datastructure that keeps track of the different
'ConstructionGraph' that get generated during the technology mapping
process.

TODO - Need to update the channel generation pieces for the channels.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,14 @@ jsonschema = "^3.2.0"
 pyeda = "^0.28.0"
 parchmint = "0.3.2"
 pymint = "^0.3.0"
+scipy = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
 flake8 = "^3.8.3"
 rope = "^0.18.0"
 black = "22.3.0"
+pytest = "^7.1.2"
 
 [tool.poetry.scripts]
 lfr-compile = "lfr.cmdline:main"
