--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pyeda = "^0.28.0"
 parchmint = "0.3.2"
 pymint = "^0.3.0"
 scipy = "^1.8.1"
+click = "8.1.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.782"
@@ -34,6 +35,7 @@ flake8 = "^3.8.3"
 rope = "^0.18.0"
 black = "22.3.0"
 pytest = "^7.1.2"
+isort = "^5.10.1"
 
 [tool.poetry.scripts]
 lfr-compile = "lfr.cmdline:main"
