--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "test"]
 	path = test
 	url = https://github.com/CIDARLAB/LFR-TestCases.git
+[submodule "dafd"]
+	path = dafd
+	url = https://github.com/rkrishnasanka/dafd
