Updated the tracking for the submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,15 @@
 [submodule "test"]
 	path = test
 	url = https://github.com/CIDARLAB/LFR-TestCases.git
+[submodule "pymint"]
+	path = pymint
+	url = https://github.com/cidarlab/pymint
+	branch = master
+[submodule "pyparchmint"]
+	path = pyparchmint
+	url = https://github.com/cidarlab/pyparchmint
+	branch = master
 [submodule "dafd"]
 	path = dafd
 	url = https://github.com/rkrishnasanka/dafd
+	branch = master
