--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,8 @@
         "njpwerner.autodocstring",
         "bungcip.better-toml",
         "rkrishnasanka.lfr",
-        "rkrishnasanka.uf"
+        "rkrishnasanka.uf",
+        "LittleFoxTeam.vscode-python-test-adapter"
       ]
     }
   },
@@ -28,11 +29,11 @@
     "ghcr.io/devcontainers-contrib/features/isort:2": {},
     "ghcr.io/devcontainers-contrib/features/poetry:2": {},
     "ghcr.io/devcontainers-contrib/features/pylint:2": {}
-  }
+  },
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "uname -a",
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  // "remoteUser": "vscode"
+  "remoteUser": "root"
 }
