--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-networkx = "^2.5"
+networkx = "^3.0"
 argparse = "^1.4.0"
 antlr4-python3-runtime = "^4.10"
 pygraphviz = "^1.6"
@@ -23,12 +23,11 @@ tabulate = "^0.8.7"
 art = "^5.2"
 jsonschema = "^3.2.0"
 pyeda = "^0.28.0"
-parchmint = "0.3.2"
-pymint = "^0.3.1"
+pymint = {path = "pymint", develop=true}
+parchmint = {path = "pyparchmint", develop=true}
 scipy = "^1.8.1"
-click = "8.1.3"
+click = "^8.1.3"
 dafd = {path = "dafd"}
-mypy = "1.1.1"
 types-tabulate = "^0.9.0.1"
 
 [tool.poetry.dev-dependencies]
@@ -37,6 +36,11 @@ rope = "^0.18.0"
 black = "22.3.0"
 pytest = "^7.1.2"
 isort = "^5.10.1"
+mypy = "^1.1.1"
+Sphinx = "^3.4.3"
+sphinx-rtd-theme = "^0.5.1"
+sphinxcontrib-napoleon = "^0.7"
+pip = "^23.0.1"
 
 [tool.poetry.scripts]
 lfr-compile = "lfr.cmdline:main"
